Remove express-openapi package, replace it with manually filled yaml OpenApi specification.
