# services/API/src/presentation/routes/restaurants.ts
@@ -1,6 +1,5 @@
-import { Request } from 'express';
+import { Request, Router } from 'express';
 import { components } from '../api';
-import { Operation } from 'express-openapi';
 import { Response } from 'express';
 import { RestaurantsService } from '../../services/restaurantsService';
 import { RestaurantsRepository } from '../../data-access/repositories/restaurantsRepository';
@@ -8,66 +7,27 @@ import { RestaurantsRepository } from '../../data-access/repositories/restaurant
 type RestaurantApiModel = components['schemas']['Restaurant'];
 
 export const restaurantService = new RestaurantsService(new RestaurantsRepository());
+export const router = Router();
 
-export const GET: Operation = [
-  async (req: Request, res: Response) => {
-    const restaurants = await restaurantService.listRestaurants();
-    res.json(restaurants);
-  },
-];
+router.get('/', async (req: Request, res: Response) => {
+  const restaurants = await restaurantService.listRestaurants();
+  res.json(restaurants);
+});
 
-GET.apiDoc = {
-  description: 'Get all restaurants',
-  operationId: 'getRestaurants',
-  tags: ['restaurants'],
-  responses: {
-    200: {
-      description: 'List of restaurants',
-      content: {
-        'application/json': {
-          schema: {
-            type: 'array',
-            items: {
-              $ref: '#/components/schemas/Restaurant',
-            },
-          },
-        },
-      },
-    },
-  },
-};
+router.get('/:id', async (req: Request, res: Response) => {
+  const id = req?.params?.id;
+  const restaurant = restaurantService.getRestaurantById(id);
+  restaurant ? res.status(200).json(restaurant) : res.status(404).send(`Restaurant with id: ${id} not found`);
+});
 
-export const POST: Operation = [
-  async (req: Request, res: Response) => {
-    const createRestaurantRequest = req.body as RestaurantApiModel;
-    await restaurantService.createRestaurant(createRestaurantRequest);
-    res.status(201).send();
-  },
-];
+router.post('/', async (req: Request, res: Response) => {
+  const createRestaurantRequest = req.body as RestaurantApiModel;
+  await restaurantService.createRestaurant(createRestaurantRequest);
+  res.status(201).send();
+});
 
-POST.apiDoc = {
-  description: 'Create Restaurant',
-  operationId: 'createRestaurant',
-  tags: ['restaurants'],
-  requestBody: {
-    content: {
-      'application/json': {
-        schema: {
-          $ref: '#/components/schemas/Restaurant',
-        },
-      },
-    },
-  },
-  responses: {
-    201: {
-      description: 'Created Restaurant',
-      content: {
-        'application/json': {
-          schema: {
-            $ref: '#/components/schemas/Restaurant',
-          },
-        },
-      },
-    },
-  },
-};
+router.delete('/:id', async (req: Request, res: Response) => {
+  const id = req?.params?.id;
+  await restaurantService.deleteRestaurant(id);
+  res.status(200).send();
+});
